# mupix

./: .flake8  .gitignore  .travis.yml  README.md  TODO  conftest.py  gandalf.py  pyproject.toml  pytest.ini  readme.todo
.github/workflows/: codeql-analysis.yml
docs/: base.rst  conf.py  contribute.md  index.md  overview.rst
docs/doctrees/: base.doctree  commands.doctree  compat.doctree  contribute.doctree  environment.pickle  index.doctree  license.doctree  overview.doctree  python2.doctree
docs/html/: .buildinfo  base.html  commands.html  compat.html  contribute.html  genindex.html  index.html  license.html  objects.inv  overview.html  py-modindex.html  python2.html  search.html  searchindex.js
docs/source/: commands.rst  compat.md  conf.py  contribute.md  index.rst  license.md  overview.rst  python2.md
gandalf/: __init__.py  application.py  base.py  classes.py  commands.py  exceptions.py  extra.py  result_objects.py  sequence_alignment.py
gandalf/Engravers/: finale.py
gandalf/OMRs/: photoscore.py  scoremaker.py
gandalf/diff/: szoch.py
gandalf/engraver/: finale.py  guitarpro.py  sibelius.py
gandalf/omr/: audiveris.py  photoscore.py  scoremaker.py  smartscore.py
mupix/: __init__.py  application.py  base.py  commands.py  core.py  extra.py  partwise.py  result_objects.py  sequence_alignment.py  typewise.py
src/: classes.py
tests/: test_application.py  test_base.py  test_cli_functionality.py  test_command_compare.py  test_command_compare_ver_anw.py  test_command_compare_ver_basic.py  test_command_read.py  test_command_validate.py  test_command_xml_type.py  test_extra.py  test_gandalf.py  test_mupix.py
tests/diff/: test_szoch.py
tests/xml/: backup-test.xml  main.py  musicxml.xsd  test.xml  (+3 more)
(+16 files in other folders)
