[tool.poetry]
name = "gandalf"
version = "0.1.0"
description = "MusicXML Evaluation Tool"
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^19.1"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^4.4"

[tool.poetry.scripts]
gandalf = 'gandalf:commands.cli'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
