[tool.poetry]
name = "gandalf"
version = "0.1.0"
description = "MusicXML Evaluation Tool"
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"
attrs = "^19.1"
click = "^7.0"
lxml = "^4.3"
matplotlib = "^3.1"
scipy = "^1.3"
music21 = "^5.5"

[tool.poetry.dev-dependencies]
pytest = "^4.4"
flake8 = "^3.7"
pytest-xdist = "^1.28"

[tool.poetry.scripts]
gandalf = 'gandalf:commands.cli'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
