[tool.poetry]
name = "mupix"
version = "0.2.1"
description = "MusicXML Evaluation Tool"
authors = ["Deepio <global2alex@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
attrs = "^19.1"
click = "^7.0"
lxml = "^4.3"
matplotlib = "^3.1"
scipy = "^1.3"
music21 = "^5.5"

[tool.poetry.dev-dependencies]
pytest = "^4.4"
flake8 = "^3.7"
pytest-xdist = "^1.28"
alabaster = "^0.7.12"
recommonmark = "^0.6.0"
Sphinx = "^2.3"
m2r = "^0.2.1"

[tool.poetry.scripts]
mupix = 'mupix:commands.cli'
[tool.poetry.extras]
docs = ["sphinx", ]
[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"
